--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -29,5 +33,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
     //:https://material.io/develop/android/docs/getting-started/
+    //materials
     implementation 'com.google.android.material:material:1.0.0'
+
+    //https://android-arsenal.com/details/1/4445
+    //Segmented Button
+    implementation 'com.github.addisonelliott:SegmentedButton:3.1.3'
 }
