--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
 
     //:https://material.io/develop/android/docs/getting-started/
     //materials
@@ -39,4 +39,13 @@ dependencies {
     //https://android-arsenal.com/details/1/4445
     //Segmented Button
     implementation 'com.github.addisonelliott:SegmentedButton:3.1.3'
+
+    //https://github.com/square/retrofit
+    //retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    //Simple XML
+    implementation 'com.squareup.retrofit2:converter-simplexml:2.5.0'
+
+
+
 }
