--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     //Simple XML
     implementation 'com.squareup.retrofit2:converter-simplexml:2.5.0'
 
+    //https://search.maven.org/artifact/io.reactivex.rxjava2/rxjava/2.2.8/jar
+    //RxJava
+    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+
 
 
 }
