--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     //https://search.maven.org/artifact/io.reactivex.rxjava2/rxjava/2.2.8/jar
     //RxJava
     implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:viewmodel:1.1.0"
 
 
 
