--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,12 +46,25 @@ dependencies {
     //Simple XML
     implementation 'com.squareup.retrofit2:converter-simplexml:2.5.0'
 
-    //https://search.maven.org/artifact/io.reactivex.rxjava2/rxjava/2.2.8/jar
+    //github.com/ReactiveX/RxAndroid
     //RxJava
     implementation "io.reactivex.rxjava2:rxjava:2.2.8"
-    implementation "android.arch.lifecycle:extensions:1.1.0"
-    implementation "android.arch.lifecycle:viewmodel:1.1.0"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
+    //https://developer.android.com/jetpack/androidx/releases/lifecycle
+    //LifeCycle
+    def lifecycle_version = "2.0.0"
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
+    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    implementation 'org.jetbrains:annotations:15.0'
 
 
 }
